Create basic increase asset